--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -43,29 +39,34 @@
               </tr>
             </thead>
           <tbody>
-            <tr>
-              <td>...</td>
-              <td>...</td>
-              <td>...</td>
-              <td>...</td>
-              <td>...</td>
-            </tr>
-            <tr>
-              <td>...</td>
-              <td>...</...>
-              <td>...</td>
-              <td>...</td>
-              <td>...</td>
-            </tr>
-            <tr>
-              <td>...</td>
-              <td>...</td>
-              <td>...</td>
-              <td>...</td>
-              <td>...</td>
-            </tr>
+            <!-- make a function that can generate a table row containing td's -->
           </tbody>
         </table>
+
+        <!-- Remove these when done -->
+        <br>
+        <br>
+        <!--  -->
+
+        <form>
+          <div class="form-group">
+            <label for="train-name-input">Train Name</label>
+            <input type="text" class="form-control" id="train-name-input" placeholder="Enter Name Here">
+          </div>
+          <div class="form-group">
+            <label for="train-destination-input">Destination</label>
+            <input type="text" class="form-control" id="train-destination-input" placeholder="Enter Destination Here">
+          </div>
+          <div class="form-group">
+            <label for="train-time-input">First Train Time (HH:mm - military time)</label>
+            <input type="text" class="form-control" id="train-time-input" placeholder="Enter Time Here">
+          </div>
+          <div class="form-group">
+            <label for="train-frequency-input">Frequency (min)</label>
+            <input type="text" class="form-control" id="train-frequency-input" placeholder="Enter Frequency Here">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
     <script src="./assets/javascript/train.js"></script>
   </body>
 </html>
