--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+
     <title>Train Scheduler</title>
   </head>
   <body>
@@ -59,13 +62,13 @@
           </div>
           <div class="form-group">
             <label for="train-time-input">First Train Time (HH:mm - military time)</label>
-            <input type="text" class="form-control" id="train-time-input" placeholder="Enter Time Here">
+            <input type="number" class="form-control" id="train-time-input" placeholder="Enter Time Here">
           </div>
           <div class="form-group">
             <label for="train-frequency-input">Frequency (min)</label>
-            <input type="text" class="form-control" id="train-frequency-input" placeholder="Enter Frequency Here">
+            <input type="number" class="form-control" id="train-frequency-input" placeholder="Enter Frequency Here">
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary" id="add-train">Submit</button>
         </form>
     <script src="./assets/javascript/train.js"></script>
   </body>
