--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+
     <title>Train Scheduler</title>
   </head>
   <body>
@@ -62,7 +64,7 @@
           </div>
           <div class="form-group">
             <label for="train-time-input">First Train Time (HH:mm - military time)</label>
-            <input type="number" class="form-control" id="train-time-input" placeholder="Enter Time Here">
+            <input type="number" class="form-control" id="first-train-input" placeholder="Enter Time Here">
           </div>
           <div class="form-group">
             <label for="train-frequency-input">Frequency (min)</label>
