--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
           </div>
           <div class="form-group">
             <label for="train-time-input">First Train Time (HH:mm - military time)</label>
-            <input type="number" class="form-control" id="first-train-input" placeholder="Enter Time Here">
+            <input type="text" class="form-control" id="first-train-input" placeholder="Enter Time Here">
           </div>
           <div class="form-group">
             <label for="train-frequency-input">Frequency (min)</label>
-            <input type="number" class="form-control" id="train-frequency-input" placeholder="Enter Frequency Here">
+            <input type="text" class="form-control" id="train-frequency-input" placeholder="Enter Frequency Here">
           </div>
           <button type="submit" class="btn btn-primary" id="add-train">Submit</button>
         </form>
