deleted CSS asset

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
 
@@ -48,7 +47,7 @@
           </tbody>
         </table>
 
-        <!-- Remove these when done -->
+        <!-- Decided not to use CSS so I just added breaks to separate the form -->
         <br>
         <br>
         <!--  -->
